// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/System/PersonalizeSetting render snap 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                SQLE
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-10ae2zl"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept="image/*"
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="upload-content-wrapper"
                      >
                        <img
                          alt="logo"
                          src="/logo.png?temp=1612148800"
                        />
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/PersonalizeSetting render snap 2`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Actiontech
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-10ae2zl"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept="image/*"
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="upload-content-wrapper"
                      >
                        <img
                          alt="logo"
                          src="/v1/dms/personalization/logo?temp=1612148800"
                        />
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/PersonalizeSetting render snap when user is not admin 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Actiontech
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-10ae2zl"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select ant-upload-disabled"
                  >
                    <span
                      class="ant-upload ant-upload-disabled"
                      role="button"
                    >
                      <input
                        accept="image/*"
                        disabled=""
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="upload-content-wrapper"
                      >
                        <img
                          alt="logo"
                          src="/v1/dms/personalization/logo?temp=1612148800"
                        />
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/PersonalizeSetting render title edit 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Actiontech
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-10ae2zl"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept="image/*"
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="upload-content-wrapper"
                      >
                        <img
                          alt="logo"
                          src="/v1/dms/personalization/logo?temp=1612148800"
                        />
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/PersonalizeSetting render title edit 2`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Actiontech
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-10ae2zl"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept="image/*"
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="upload-content-wrapper"
                      >
                        <img
                          alt="logo"
                          src="/v1/dms/personalization/logo?temp=1612148800"
                        />
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/PersonalizeSetting render title edit 3`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <div
                  class="ant-spin-nested-loading"
                >
                  <div>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning"
                    >
                      <span
                        class="ant-spin-dot ant-spin-dot-spin"
                      >
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                        <i
                          class="ant-spin-dot-item"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    class="ant-spin-container ant-spin-blur"
                  >
                    <span
                      class="ant-input-group-wrapper basic-input-wrapper css-1pd1cd5"
                    >
                      <span
                        class="ant-input-wrapper ant-input-group"
                      >
                        <input
                          class="ant-input"
                          id="editInput"
                          placeholder="请输入{{name}}"
                          type="text"
                          value="SQLE-test-title"
                        />
                        <span
                          class="ant-input-group-addon"
                        >
                          <svg
                            class="custom-icon custom-icon-selected"
                            fill="none"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="selected"
                            >
                              <path
                                d="M3.33334 8.00002L6.66668 11.3334L13.3333 4.66669"
                                id="Vector"
                                stroke="#4583FF"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </g>
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select ant-upload-disabled"
                  >
                    <span
                      class="ant-upload ant-upload-disabled"
                      role="button"
                    >
                      <input
                        accept="image/*"
                        disabled=""
                        style="display: none;"
                        type="file"
                      />
                      <span
                        aria-label="loading"
                        class="anticon anticon-loading anticon-spin"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="loading"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="0 0 1024 1024"
                          width="1em"
                        >
                          <path
                            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`base/System/PersonalizeSetting render upgrade logo img 1`] = `
<body>
  <div>
    <section
      class="system-form-wrapper"
    >
      <div
        class="ant-row ant-row-space-between ant-row-middle config-title-wrapper has-border"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            个性化设置
          </div>
        </div>
      </div>
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化标题
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                Actiontech
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-icon-only config-item-filed-edit-button basic-button-wrapper css-10ae2zl"
                  hidden=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <svg
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.162 12.667H14V14H2v-2.829l6.6-6.6 2.828 2.83zm3.38-9.038 1.415-1.414a.667.667 0 0 1 .942 0L13.785 4.1a.667.667 0 0 1 0 .942l-1.414 1.414z"
                        fill="#8A8F99"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-row-space-between ant-row-middle css-19fu9ar"
          >
            <div
              class="ant-col ant-col-11 config-item-label"
            >
              <div
                class="config-item-label"
              >
                <div
                  class="title"
                >
                  个性化Logo
                </div>
                <div
                  class="tips"
                >
                  建议尺寸为 58 × 48 的png图片
                </div>
              </div>
            </div>
            <div
              class="ant-space ant-space-horizontal ant-space-align-center config-item-filed"
            >
              <div
                class="ant-space-item"
              >
                <span
                  class="ant-upload-wrapper ant-upload-picture-card-wrapper"
                >
                  <div
                    class="ant-upload ant-upload-select"
                  >
                    <span
                      class="ant-upload"
                      role="button"
                      tabindex="0"
                    >
                      <input
                        accept="image/*"
                        style="display: none;"
                        type="file"
                      />
                      <div
                        class="upload-content-wrapper"
                      >
                        <img
                          alt="logo"
                          src="/v1/dms/personalization/logo?temp=1612148800"
                        />
                      </div>
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
